Fix star icon misalignment in Mastoodn v4.4.0-alpha.1

--- a/layout-multiple-columns.css
+++ b/layout-multiple-columns.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   2.0.6rc3 */
+   2.0.6rc4 */
 
 /* CSS variables */
 :root {
@@ -4293,7 +4293,6 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
   background-size: unset;
   /* stylelint-disable-next-line */
   content: '' !important;
-  height: 100px;
   left: -38px;
   pointer-events: none;
   position: absolute;
@@ -4539,7 +4538,7 @@ div[tabindex="-1"] + div[tabindex="-1"] > .status__wrapper > .status-reply.statu
 .layout-multiple-columns button.icon-button.icon-button--with-counter.activate.star-icon > .icon-star {
   position: absolute !important;
   top: unset !important;
-  left: -34px !important;
+  left: -40px !important;
 }
 
 @media (hover: none) {
